# minimal-rich-typer-cli

./: README.md  multi_command_output.html  setup.cfg  single_command_output.html
minimal_rich_typer_cli/: multi_command.py  single_command.py
