
[metadata]
name = rich-typer-test
url = https://github.com/alisterburt/rich-typer-test
author = Alister Burt
author_email = alisterburt@gmail.com
description = package description.
long_description = file: README.md
long_description_content_type = text/markdown
license = No license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/alisterburt/rich-typer-test

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    rich
    typer


[options.entry_points]
console_scripts =
    single_command = minimal_rich_typer_cli.single_command:app
    multi_command = minimal_rich_typer_cli.multi_command:app

[bdist_wheel]
universal = 1
